✨ [FEAT] Adiciona rota de usuário em campanha
Descrição detalhada:
- Adiciona rota de usuário em campanha
- Adiciona controller, router, schemas, services e types de usuário em campanha
- Modifica swagger para incluir rota de usuário em campanha
- Modifica v1Router para incluir rota de usuário em campanha
-

Notas adicionais:
- close #7
