# backend/src/router/v1Router.ts
@@ -3,7 +3,8 @@ import { Router } from "express";
 import statRouter from "../resources/stat/stat.router";
 import systemRouter from "../resources/system/system.router";
 import systemStatRouter from "../resources/systemStat/systemStat.router";
-import capaignRouter from "../resources/campaign/campaign.router";
+import campaignRouter from "../resources/campaign/campaign.router";
+import userInCampaignRouter from "../resources/userInCampaign/userInCampaign.router";
 
 const v1Router = Router();
 
@@ -24,7 +25,12 @@ v1Router.use(
 
 v1Router.use(
   "/campaigns", // #swagger.tags = ['Campaigns']
-  capaignRouter
+  campaignRouter
+);
+
+v1Router.use(
+  "/usersInCampaign", // #swagger.tags = ['Users in Campaign']
+  userInCampaignRouter
 );
 
 export default v1Router;
